--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.4",
+    "@supabase/supabase-js": "^2.38.4",
     "next": "13.5.6",
-    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
